minor tweaks, turned on optimization.

--- a/tst_btlzazip/Makefile.msvc
+++ b/tst_btlzazip/Makefile.msvc
@@ -4,6 +4,7 @@ BINSUF=.exe
 CC_OUTEXE=cl /Fe
 CC_OUTTOOL=cl /Fe
 
-CFLAGS=/I. /DBGBBTJ_DLL /DBGBBTJ_NODY /Zi
+# CFLAGS=/I. /DBGBBTJ_DLL /DBGBBTJ_NODY /Zi
+CFLAGS=/I. /DBGBBTJ_DLL /DBGBBTJ_NODY /Zi /O2
 
 include Makefile.inc
